# autumns-various-additions

./: .gitignore  CMakeLists.txt  README.md  changelog.txt  mod.vcxproj  mod.vcxproj.filters
AutumnalLab/: FlagListing.txt  entityInfo.txt  tsc_list.txt
BoostLab/: _CustomEntities.txt  editor.rect  entityInfo.txt  tsc_list.txt
BoostLab/AutumnsVariousAdditionsReadmes/: AVA_LuaAPI.txt  Advanced--CollabModeChanges.txt  AutumnalLab_credits.txt  BuiltInFModParameters.txt  CustomEntities.txt  CustomTSC.txt  CustomTSC_BKG_Explanation.txt  CustomTSC_BKG_Format.txt  HackIncompatibilities.txt
CaveStory/: Doukutsu.exe.blbkp  Profile.dat.bak  ToDo-AvaLuaAPI.txt  bl_tiletypes_wip.aseprite  config_test.ini  surfacesUsed.txt  todo.txt  xmlFunc - Copy.xml  xmlFunc.xml
CaveStory/data/: ArmsItem.tsc  ArmsItem2.tsc  Head.tsc  Head2.tsc  npc.tbl  patch.txt  stage.tbl
Documentation/: Advanced--CollabModeChanges.txt  AutumnalLab_credits.txt  BuiltInFModParameters.txt  CustomEntities.txt  CustomTSC.txt  CustomTSC_BKG_Explanation.txt  CustomTSC_VAR.txt
SeaTone/: ctone_readme.txt  debug.stt  pusher_readme.txt
ZZ-FinalRelease/: ava-readme.txt  dll-compatibility.txt  npctblcombine.py
src/: API_Pause.cpp  API_Pause.h  ASMLoader.cpp  ASMLoader.h  ASMPatches.cpp  ASMPatches.h  AVA_API.cpp  AVA_API.h  AutPI.cpp  AutPI.h  BKG.cpp  BKG.h  CollabFlag.cpp  CollabFlag.h  Collectables.cpp  Collectables.h  Config.cpp  Config.h  DialogueChoice.cpp  DialogueChoice.h  Draw.cpp  Draw.h  Entity.cpp  Entity.h  EntityLoad.cpp  EntityLoad.h  EntityTable.cpp  EntityTable.h  ExternalTables.cpp  ExternalTables.h  File.cpp  File.h  Frame.cpp  Frame.h  Game.cpp  Game.h  Generic.cpp  Generic.h  GenericLoad.cpp  GenericLoad.h  (+44 more)
(+107 files in other folders)
